@startuml
namespace adapter {
    interface Analyzer  {
        + Analyze( []byte) error

    }
    class PowerfulAnalyzer << (S,Aquamarine) >> {
        + Analyze(dat []byte) error

    }
    class Record << (S,Aquamarine) >> {
        + Name string
        + Price float64
        + BuyNum int64
        + SellNum int64

    }
    class Stock << (S,Aquamarine) >> {
        + Data() ([]byte, error)

    }
    class jsonAnalyzerAdapter << (S,Aquamarine) >> {
        - analyzer *PowerfulAnalyzer

        + Analyze(dat []byte) error

    }
}

"adapter.Analyzer" <|-- "adapter.PowerfulAnalyzer"
"adapter.Analyzer" <|-- "adapter.jsonAnalyzerAdapter"
"adapter.Stock" ..> "adapter.Record"
"adapter.jsonAnalyzerAdapter" ..> "adapter.Record"
"adapter.jsonAnalyzerAdapter" ..> "adapter.PowerfulAnalyzer"
@enduml
